--- a/Classification dashboard.ipynb
+++ b/Classification dashboard.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-15T21:02:57.653651Z",
-     "start_time": "2025-05-15T21:02:57.558499Z"
+     "end_time": "2025-05-19T16:08:06.245374Z",
+     "start_time": "2025-05-19T16:08:06.134382Z"
     }
    },
    "outputs": [],
@@ -27,8 +27,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-15T21:03:01.455162Z",
-     "start_time": "2025-05-15T21:03:01.438147Z"
+     "end_time": "2025-05-19T16:08:06.262234Z",
+     "start_time": "2025-05-19T16:08:06.246382Z"
     }
    },
    "id": "45e358343afe5d5d",
@@ -53,8 +53,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-15T21:03:02.843137Z",
-     "start_time": "2025-05-15T21:03:02.829750Z"
+     "end_time": "2025-05-19T16:08:06.282716Z",
+     "start_time": "2025-05-19T16:08:06.263243Z"
     }
    },
    "id": "131a0cc6d01b0e5c",
@@ -70,12 +70,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-15T21:04:14.614604Z",
-     "start_time": "2025-05-15T21:04:14.611272Z"
+     "end_time": "2025-05-19T16:08:06.292078Z",
+     "start_time": "2025-05-19T16:08:06.283722Z"
     }
    },
    "id": "7098992df002bd59",
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -90,12 +90,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-15T21:04:32.236885Z",
-     "start_time": "2025-05-15T21:04:32.234109Z"
+     "end_time": "2025-05-19T16:08:06.309753Z",
+     "start_time": "2025-05-19T16:08:06.293270Z"
     }
    },
    "id": "6b26037db448c54b",
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -104,15 +104,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tarok\\AppData\\Local\\Temp\\ipykernel_7140\\2687397251.py:42: FutureWarning:\n",
+      "C:\\Users\\tarok\\AppData\\Local\\Temp\\ipykernel_19604\\3420900888.py:46: FutureWarning:\n",
       "\n",
       "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "\n",
-      "C:\\Users\\tarok\\AppData\\Local\\Temp\\ipykernel_7140\\2687397251.py:49: FutureWarning:\n",
+      "C:\\Users\\tarok\\AppData\\Local\\Temp\\ipykernel_19604\\3420900888.py:53: FutureWarning:\n",
       "\n",
       "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "\n",
-      "C:\\Users\\tarok\\AppData\\Local\\Temp\\ipykernel_7140\\2687397251.py:63: FutureWarning:\n",
+      "C:\\Users\\tarok\\AppData\\Local\\Temp\\ipykernel_19604\\3420900888.py:67: FutureWarning:\n",
       "\n",
       "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "\n"
@@ -120,7 +120,7 @@
     },
     {
      "data": {
-      "text/plain": "<IPython.lib.display.IFrame at 0x205a8a2b320>",
+      "text/plain": "<IPython.lib.display.IFrame at 0x1e8d8775550>",
       "text/html": "\n        <iframe\n            width=\"100%\"\n            height=\"650\"\n            src=\"http://127.0.0.1:8050/\"\n            frameborder=\"0\"\n            allowfullscreen\n            \n        ></iframe>\n        "
      },
      "metadata": {},
@@ -140,9 +140,13 @@
     "import matplotlib.pyplot as plt\n",
     "import io\n",
     "import base64\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Load data and model\n",
-    "df = pd.read_csv(\"mobile_addiction.csv\")  # Add your real CSV here\n",
+    "df = pd.read_csv(\"mobile_addiction.csv\")\n",
     "model = joblib.load(\"random_forest_model.pkl\")\n",
     "\n",
     "features = [\n",
@@ -223,9 +227,11 @@
     "\n",
     "    html.H2(\"🔥 Feature Importance (XGBoost)\"),\n",
     "    dcc.Graph(id='feature-importance'),\n",
+    "\n",
+    "    html.H2(\"🖐️ KNN Elbow Method (Error Rate by k)\"),\n",
+    "    dcc.Graph(id='knn-elbow-plot')\n",
     "])\n",
     "\n",
-    "# General stats\n",
     "@app.callback(\n",
     "    Output('stats-output', 'children'),\n",
     "    Input('feature-dropdown', 'value')\n",
@@ -242,7 +248,6 @@
     "        html.Li(f\"Not Addicted: {addiction_ratio.get(0, 0)*100:.1f}%\")\n",
     "    ])\n",
     "\n",
-    "# Binned stacked bar\n",
     "@app.callback(\n",
     "    Output('binned-addiction-graph', 'figure'),\n",
     "    Input('feature-dropdown', 'value')\n",
@@ -271,7 +276,6 @@
     "    fig.update_layout(barmode='stack', title=f'Addiction by {feature.replace(\"_\", \" \").title()}')\n",
     "    return fig\n",
     "\n",
-    "# Boxplot\n",
     "@app.callback(\n",
     "    Output('boxplot-outliers', 'figure'),\n",
     "    Input('feature-dropdown', 'value')\n",
@@ -279,7 +283,6 @@
     "def update_boxplot(feature):\n",
     "    return px.box(df, y=feature, title=f'Boxplot of {feature.replace(\"_\", \" \").title()}')\n",
     "\n",
-    "# Histogram with KDE\n",
     "@app.callback(\n",
     "    Output('histogram-kde', 'figure'),\n",
     "    Input('feature-dropdown', 'value')\n",
@@ -290,7 +293,6 @@
     "                       title=f'Distribution of {feature.replace(\"_\", \" \").title()} by Addiction')\n",
     "    return fig\n",
     "\n",
-    "# Correlation heatmap image\n",
     "@app.callback(\n",
     "    Output('correlation-heatmap', 'src'),\n",
     "    Input('feature-dropdown', 'value')\n",
@@ -305,7 +307,6 @@
     "    buf.seek(0)\n",
     "    return 'data:image/png;base64,' + base64.b64encode(buf.read()).decode()\n",
     "\n",
-    "# Feature importance\n",
     "@app.callback(\n",
     "    Output('feature-importance', 'figure'),\n",
     "    Input('feature-dropdown', 'value')\n",
@@ -316,28 +317,71 @@
     "    fig = px.bar(fi_df, x='Importance', y='Feature', orientation='h', title=\"XGBoost Feature Importance\")\n",
     "    return fig\n",
     "\n",
-    "# Run server\n",
+    "@app.callback(\n",
+    "    Output('knn-elbow-plot', 'figure'),\n",
+    "    Input('feature-dropdown', 'value')\n",
+    ")\n",
+    "def plot_knn_elbow(_):\n",
+    "    X = df[features]\n",
+    "    y = df['addicted']\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "    k_range = range(1, 21)\n",
+    "    error_rates = []\n",
+    "\n",
+    "    for k in k_range:\n",
+    "        knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "        knn.fit(X_train_scaled, y_train)\n",
+    "        y_pred_k = knn.predict(X_test_scaled)\n",
+    "        error = 1 - accuracy_score(y_test, y_pred_k)\n",
+    "        error_rates.append(error)\n",
+    "\n",
+    "    fig = go.Figure()\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=list(k_range),\n",
+    "        y=error_rates,\n",
+    "        mode='lines+markers',\n",
+    "        name='Error Rate',\n",
+    "        marker=dict(size=8)\n",
+    "    ))\n",
+    "    fig.update_layout(\n",
+    "        title='KNN Elbow Method (Error Rate by k)',\n",
+    "        xaxis_title='Number of Neighbors (k)',\n",
+    "        yaxis_title='Error Rate',\n",
+    "        template='plotly_dark'\n",
+    "    )\n",
+    "    return fig\n",
+    "\n",
     "if __name__ == '__main__':\n",
-    "    app.run(debug=True)\n"
+    "    app.run(debug=True)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-15T21:24:10.729754Z",
-     "start_time": "2025-05-15T21:24:10.125537Z"
+     "end_time": "2025-05-19T16:12:22.096671Z",
+     "start_time": "2025-05-19T16:12:21.672022Z"
     }
    },
    "id": "47310b1b9d3d232c",
-   "execution_count": 14
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-05-19T16:08:08.411544Z",
+     "start_time": "2025-05-19T16:08:08.406396Z"
+    }
    },
-   "id": "5c101bf917a33462"
+   "id": "5c101bf917a33462",
+   "execution_count": 6
   }
  ],
  "metadata": {
